# agent_learn

./: .gitignore  pyproject.toml
notebooks/1.AI通识与基础/: 1.1_OpenAi.ipynb
notebooks/2.LangChain入门/resources/: 2.1_models.ipynb
notebooks/私厨管家/: 私厨管家.ipynb
notebooks/私厨管家/resources/: memory.db-shm  memory.db-wal
